# causaldyn

./: .gitignore  README.md  historical_marketplace_logs.csv  learn.ipynb  oco.ipynb  pyproject.toml  requirements.txt
caudyn/: environment.py  linucb.py  r_learner.py  run_causal_experiment.py
caudyn/causal/: __init__.py  data_utils.py  meta_learners.py  metrics.py  plotting.py
caudyn/decision_engine/: __init__.py  pacing_controller.py  threshold_dispatcher.py
caudyn/oco/: __init__.py  experiments.py  linear_bandit_base.py  lints_agents.py  linucb_agents.py  linucb_removed.py  reporting.py
caudyn/pipelines/: __init__.py  causal_inference.py  common.py  contracts.py  offline_optimization.py  online_decision.py  persistence.py
caudyn/simulation/: __init__.py  system_orchestrator.py
caudyn/value_optimization/: __init__.py  lp_solver.py  unit_selector.py
tutorial/: causal_ml.ipynb  causalml_t_x_r_learners_comparison.ipynb  comparison_4agents.ipynb  lints.ipynb  linucb.ipynb  linucb_dup.ipynb
